# alac-pretty

./: Cargo.toml  README.md
assets/: sample_alacritty.yml
src/: ioctl.rs  main.rs  parser.rs  ui.rs
src/tests/: parser.rs
