[package]
name = "alac-pretty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
libc = "0.2.103"
signal-hook = { version = "0.3.9", features = ["extended-siginfo"] }
termios = "0.3.3"
